Enable nullness check from checker framework
Also include maven wrapper