@@ -19,18 +19,38 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <!-- <fork>true</fork>-->
                     <release>11</release>
+                    <compilerArguments>
+                        <Xmaxerrs>10000</Xmaxerrs>
+                        <Xmaxwarns>10000</Xmaxwarns>
+                    </compilerArguments>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>com.google.dagger</groupId>
                             <artifactId>dagger-compiler</artifactId>
                             <version>${dagger.version}</version>
                         </path>
+                        <path>
+                            <groupId>org.checkerframework</groupId>
+                            <artifactId>checker</artifactId>
+                            <version>3.2.0</version>
+                        </path>
                     </annotationProcessorPaths>
+                    <annotationProcessors>
+                        <annotationProcessor>dagger.internal.codegen.ComponentProcessor</annotationProcessor>
+                        <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+                        <!-- TODO: enable -->
+                        <!-- <annotationProcessor>org.checkerframework.checker.signedness.SignednessChecker</annotationProcessor> -->
+                    </annotationProcessors>
+                    <compilerArgs>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                        <arg>-AskipDefs=\.DaggerBoardFactory$</arg> <!-- generated by dagger -->
+                        <!-- <arg>-Awarns</arg> -->
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -184,10 +204,10 @@
             <version>${dagger.version}</version>
         </dependency>
 
-        <dependency> <!-- TODO: Enable compile time checks -->
+        <dependency>
             <groupId>org.checkerframework</groupId>
             <artifactId>checker-qual</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0</version>
         </dependency>
     </dependencies>
 </project>
